Add controller to handle statistics, encode, decode, open main url using short url
