# routes/URLRouter.js
@@ -15,8 +15,8 @@ URLRouter.route(`/decode`)
     .post(
         (req, res, next) => controllerService.checkAPIKey(req, res, next),
         (req, res, next) => shortenerController.decode(req, res));
-URLRouter.route(`/statistic/:url`)
-    .post(
+URLRouter.route(`/statistic/:url_path`)
+    .get(
         (req, res, next) => controllerService.checkAPIKey(req, res, next),
-        (req, res, next) => shortenerController.decode(req, res));
+        (req, res, next) => shortenerController.showStatistics(req, res));
 export default URLRouter;
